--- a/arch/arm/configs/cyanogenmod_ls990_defconfig
+++ b/arch/arm/configs/cyanogenmod_ls990_defconfig
@@ -408,6 +408,8 @@ CONFIG_LCD_KCAL=y
 # CONFIG_LGE_QSDL_SUPPORT is not set
 CONFIG_LGE_QFPROM_INTERFACE=y
 # CONFIG_MSM_STACKED_MEMORY is not set
+CONFIG_HAVE_END_MEM=y
+CONFIG_END_MEM=0xffffffff
 # CONFIG_KERNEL_MSM_CONTIG_MEM_REGION is not set
 CONFIG_MSM_AMSS_VERSION=6225
 # CONFIG_MSM_AMSS_VERSION_6210 is not set
@@ -716,6 +718,10 @@ CONFIG_ZBOOT_ROM_BSS=0
 CONFIG_CMDLINE=""
 # CONFIG_XIP_KERNEL is not set
 # CONFIG_KEXEC is not set
+CONFIG_KEXEC=y
+CONFIG_ATAGS_PROC=y
+CONFIG_KEXEC_HARDBOOT=y
+CONFIG_KEXEC_HB_PAGE_ADDR=0x07b00000
 # CONFIG_CRASH_DUMP is not set
 # CONFIG_AUTO_ZRELADDR is not set
 
