--- a/arch/arm/configs/cyanogenmod_ls990_defconfig
+++ b/arch/arm/configs/cyanogenmod_ls990_defconfig
@@ -89,7 +89,7 @@ CONFIG_RCU_FANOUT=32
 CONFIG_RCU_FAST_NO_HZ=y
 # CONFIG_TREE_RCU_TRACE is not set
 # CONFIG_RCU_BOOST is not set
-# CONFIG_IKCONFIG is not set
+CONFIG_IKCONFIG=y
 CONFIG_LOG_BUF_SHIFT=19
 CONFIG_CGROUPS=y
 CONFIG_CGROUP_DEBUG=y
@@ -1325,7 +1325,7 @@ CONFIG_OF=y
 #
 # Device Tree and Open Firmware support
 #
-# CONFIG_PROC_DEVICETREE is not set
+CONFIG_PROC_DEVICETREE=y
 # CONFIG_OF_SELFTEST is not set
 CONFIG_OF_FLATTREE=y
 CONFIG_OF_EARLY_FLATTREE=y
